<resources>
    <string name="app_name">MyContact</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_a_new_account">Create a new Account!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="already_have_an_account_login">already have an account? login</string>
    <string name="name_contact">Name Contact</string>
    <string name="_09140000000">09140000000</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="add">add</string>
    <string name="cancel">cancel</string>
    <string name="logout">logout</string>
</resources>