<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/create_new_contact"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNameContactDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />


    <EditText
        android:id="@+id/etPhoneNumberDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNameContactDialog"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhoneNumberDialog"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:text="@string/add"
        android:textAllCaps="true"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPhoneNumberDialog"
        android:layout_margin="5dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:layout_toStartOf="@id/tvAdd"
        android:layout_toLeftOf="@id/tvAdd"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textSize="18sp"
        tools:ignore="RtlSymmetry" />
</RelativeLayout>